2004-08-14   Ryan Lortie  <desrt@desrt.ca>

	* libgnomevfs/gnome-vfs-xfer.c: fix small leaks

2004-08-14  Joe Marcus Clarke  <marcus@freebsd.org>

	* libgnomevfs/gnome-vfs-utils.c: fix free space calculation on FreeBSD.

2004-08-13  Alexander Larsson  <alexl@redhat.com>

	* modules/ftp-method.c (ftp_connection_create):
	Don't ask for password for anonymous.

2004-08-13  Mark McLoughlin  <mark@skynet.ie>

	* schemas/desktop_gnome_url_handlers.schemas.in:
	s/need-terminal/needs_terminal/ for the aim: handler.

2004-08-13  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	* modules/Makefile.am:
	* modules/default-modules.conf:
	* modules/extfs-method.c:
	* modules/extfs/*:
	Remove extfs module. It had security issues
	and it doesn't work well anyway.

2004-08-12  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-mime-info-cache.c:
	(gnome_vfs_mime_info_cache_dir_init_defaults_list):
	Rename default.list name to [Default Applications]
	Need eel upgrade.
	
	(get_all_parent_types_helper), (get_all_parent_types),
	(gnome_vfs_mime_get_all_desktop_entries):
	Correctly find desktop files for parent mime types.

2004-08-12  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Added nb to ALL_LINGUAS.

2004-08-12  Ryan Lortie  <desrt@desrt.ca>

	* libgnomevfs/gnome-vfs-private-utils.c: (_gnome_vfs_have_ipv6):
	* libgnomevfs/gnome-vfs-resolve.c: (restart_resolve):
	* libgnomevfs/gnome-vfs-ssl.c: (_gnome_vfs_ssl_init),
	(gnome_vfs_ssl_enabled):
	* modules/computer-method.c: (get_data_for_network),
	(get_data_for_home), (get_data_for_root):
	* modules/extfs-method.c: (getdelim):
	* modules/fstype.c: (filesystem_type), (filesystem_type_uncached),
	(xatoi):
	* modules/http-neon-method.c: (http_auth_cache_init),
	(http_auth_cache_shutdown), (quick_allow_lookup_init),
	(quit_allow_lookup_destroy), (neon_session_pool_init),
	(neon_session_pool_shutdown):
	* modules/http-proxy.c: (proxy_init), (proxy_shutdown):